Made some changes in index.html

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     
                     <div class="input-group">
                         <label for="message">Message:</label>
-                        <textarea id="message" name="message" required placeholder="Tell me about your project or just say hello!"></textarea>
+                        <textarea id="message" name="message" required placeholder="Anything  ....."></textarea>
                         <div class="error-message" id="messageError"></div>
                     </div>
                     
